{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 46,
  "lineage": "c71537e5-6064-7baa-99e5-cde51517f696",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:654654435115:instance/i-0cf034e5abbf8f42a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-role",
            "id": "i-0cf034e5abbf8f42a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04bea6af5cc65d4d8"
              }
            ],
            "primary_network_interface_id": "eni-04bea6af5cc65d4d8",
            "private_dns": "ip-10-0-1-127.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.127",
            "public_dns": "ec2-43-205-135-35.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.135.35",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e3c96d3fbf5f1ba2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06774ddad578e556f",
            "tags": {
              "Name": "auth-sso-server"
            },
            "tags_all": {
              "Name": "auth-sso-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d9d834fdc08f3ef1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654435115",
            "id": "i-0cf034e5abbf8f42a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435115:internet-gateway/igw-0a947fc67c23f468b",
            "id": "igw-0a947fc67c23f468b",
            "owner_id": "654654435115",
            "region": "ap-south-1",
            "tags": {
              "Name": "auth-sso-igw"
            },
            "tags_all": {
              "Name": "auth-sso-igw"
            },
            "vpc_id": "vpc-0b6e59a44e38ed359"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654435115",
            "id": "igw-0a947fc67c23f468b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435115:route-table/rtb-05f420cee01d45552",
            "id": "rtb-05f420cee01d45552",
            "owner_id": "654654435115",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a947fc67c23f468b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "auth-sso-rt"
            },
            "tags_all": {
              "Name": "auth-sso-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6e59a44e38ed359"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654435115",
            "id": "rtb-05f420cee01d45552",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff3016b97d59f6f7",
            "region": "ap-south-1",
            "route_table_id": "rtb-05f420cee01d45552",
            "subnet_id": "subnet-06774ddad578e556f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654435115",
            "id": "rtbassoc-0ff3016b97d59f6f7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435115:security-group/sg-0d9d834fdc08f3ef1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9d834fdc08f3ef1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "terraform-20260515044153412200000001",
            "name_prefix": "terraform-",
            "owner_id": "654654435115",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "auth-sso-sg"
            },
            "tags_all": {
              "Name": "auth-sso-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6e59a44e38ed359"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654435115",
            "id": "sg-0d9d834fdc08f3ef1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435115:subnet/subnet-06774ddad578e556f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06774ddad578e556f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654435115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "auth-sso-subnet"
            },
            "tags_all": {
              "Name": "auth-sso-subnet"
            },
            "vpc_id": "vpc-0b6e59a44e38ed359"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654435115",
            "id": "subnet-06774ddad578e556f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654435115:vpc/vpc-0b6e59a44e38ed359",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-011392b9857b7aa28",
            "default_route_table_id": "rtb-042d72826d6e4e88e",
            "default_security_group_id": "sg-05871e99f997ffb37",
            "dhcp_options_id": "dopt-05ed79e0f6e16fe15",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b6e59a44e38ed359",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042d72826d6e4e88e",
            "owner_id": "654654435115",
            "region": "ap-south-1",
            "tags": {
              "Name": "auth-sso-vpc"
            },
            "tags_all": {
              "Name": "auth-sso-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654435115",
            "id": "vpc-0b6e59a44e38ed359",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}